Estrutura inicial HTML
Realizei a estrutura inicial do Index.html

--- a/index.html
+++ b/index.html
@@ -2,13 +2,74 @@
 <html lang="en">
 
 <head>
+  <title>Agencia de Turismo
+  </title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
+
 </head>
 
 <body>
-
+  <header>
+    <div><img src="imagens/imagem.svg" alt="Agencia de turismo"></div>
+    <ul>
+      <li><a href="">Orçamento</a></li>
+      <li><a href="">Pacotes</a></li>
+      <li><a href="">Quem somos</a></li>
+      <li><a href="">Contato</a></li>
+    </ul>
+  </header>
+  <main>
+    <nav>
+      <div>
+        <h1>O que fazemos?</h1>
+      </div>
+      <div><img src="" alt=""></div>
+      <!-- Colocar imagem aqui -->
+      <div>
+        <h1> Detalhes Texto!!</h1>
+      </div>
+    </nav>
+  </main>
+  <section>
+    <div>
+      <h1>O que fazemos?</h1>
+    </div>
+    <ul>
+      <li><img src="" alt="Paris"></li>
+      <li><img src="" alt="Egito"></li>
+      <li><img src="" alt="Disney"></li>
+      <li><img src="" alt="Turkia"></li>
+      <!--Remover o ALT para não ter som a mais na acessibilidade!  -->
+    </ul>
+    <div>
+      <h2>"Relato pessoal"</h2>
+      <!-- Criar relato pessoal -->
+    </div>
+  </section>
+  <section>
+    <nav>
+      <div>
+        <h2>Contatos</h2>
+        <p>(21) 99999-9999</p>
+        <p>email@gmail.com</p>
+        <a href="">Desenvolvedor</a>
+      </div>
+    </nav>
+    <nav>
+      <h2>Como nos encontrar?</h2>
+      <img src="" alt="">
+      <!-- Adicionar imagem do maps onde ficará o local -->
+      <!-- Ou utilizar integração para adicionar um Maps mesmo! -->
+    </nav>
+  </section>
+  <footer>
+    <div>
+      <p>Todos os direitos reservados </p>
+    </div>
+  </footer>
 </body>
 
 </html>
